@@ -1,3 +1,11 @@
+2017-07-13  Tom de Vries  <tom@codesourcery.com>
+
+	backport from mainline:
+	PR tree-optimization/81192
+	2017-07-03  Tom de Vries  <tom@codesourcery.com>
+
+	* gcc.dg/pr81192.c: New test.
+
 2017-07-06  Andrew Pinski  <apinski@cavium.com>
 
 	* gcc.target/aarch64/pr71112.c : New Testcase.
